--- a/BloodDonor/view/controller/HSRemoteEventViewController.xib
+++ b/BloodDonor/view/controller/HSRemoteEventViewController.xib
@@ -35,7 +35,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="319059190">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="579151745">
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 109}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1007581772"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,6 +58,7 @@
 						<int key="NSvFlags">298</int>
 						<string key="NSFrame">{{180, 29}, {130, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="349767820"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -88,6 +90,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="898900240"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -102,6 +105,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 29}, {89, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="888102303"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -133,6 +137,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 68}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="557056225"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="278871441">
@@ -168,6 +173,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{103, 33}, {18, 14}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="883579600"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -182,6 +188,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 134}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="531825808"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -193,6 +200,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 111}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522862800"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -207,6 +215,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 109}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="103334164"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -237,6 +246,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 145}, {301, 100}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -261,13 +271,15 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 265}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="579151745"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="278871441"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="297999329">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="111771185">
@@ -275,6 +287,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="297999329"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="356500051"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -289,6 +302,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{0, 2}, {320, 434}}</string>
 						<reference key="NSSuperview" ref="297999329"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -297,6 +311,8 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 436}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="111771185"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -308,7 +324,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="181457685">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="859539592">
@@ -316,6 +332,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 140}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="262256123"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -330,6 +347,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="186740919"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -341,6 +359,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 25}, {135, 29}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="128747144"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -365,6 +384,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 99}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="837810446"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -390,6 +410,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 69}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="894565533"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -415,6 +436,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{148, 35}, {10, 13}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="376805095"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -429,6 +451,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 175}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="771648396"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -440,6 +463,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 152}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="719721950"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -451,6 +475,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 150}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="254960798"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -474,6 +499,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 186}, {301, 100}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1039551626"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -502,6 +528,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 313}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -531,6 +558,7 @@
 						<int key="NSvFlags">298</int>
 						<string key="NSFrame">{{180, 31}, {130, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="497633611"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -552,6 +580,8 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 357}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="859539592"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -910,7 +940,101 @@
 			<nil key="sourceID"/>
 			<int key="maxID">144</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">HSRemoteEventViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">eventDoneButtonClicked:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">eventDoneButtonClicked:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">eventDoneButtonClicked:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bloodDonationCommentLabel">UILabel</string>
+						<string key="bloodDonationDateLabel">UILabel</string>
+						<string key="bloodDonationLabAddressLabel">UILabel</string>
+						<string key="bloodDonationTypeLabel">UILabel</string>
+						<string key="bloodDonationView">UIView</string>
+						<string key="bloodTestsCommentsLabel">UILabel</string>
+						<string key="bloodTestsDateLabel">UILabel</string>
+						<string key="bloodTestsLabAddressLabel">UILabel</string>
+						<string key="bloodTestsView">UIView</string>
+						<string key="doneButton">UIButton</string>
+						<string key="rootScrollView">UIScrollView</string>
+						<string key="rootView">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bloodDonationCommentLabel">
+							<string key="name">bloodDonationCommentLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodDonationDateLabel">
+							<string key="name">bloodDonationDateLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodDonationLabAddressLabel">
+							<string key="name">bloodDonationLabAddressLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodDonationTypeLabel">
+							<string key="name">bloodDonationTypeLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodDonationView">
+							<string key="name">bloodDonationView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodTestsCommentsLabel">
+							<string key="name">bloodTestsCommentsLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodTestsDateLabel">
+							<string key="name">bloodTestsDateLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodTestsLabAddressLabel">
+							<string key="name">bloodTestsLabAddressLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bloodTestsView">
+							<string key="name">bloodTestsView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="doneButton">
+							<string key="name">doneButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="rootScrollView">
+							<string key="name">rootScrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="rootView">
+							<string key="name">rootView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HSRemoteEventViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SLabel.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
